--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -31,3 +31,18 @@ body {
     position: absolute;
     right: 0;
 }
+
+ul {
+    list-style-type: none;
+    padding: 0;
+    border: 1px solid #ddd;
+}
+
+ul li {
+    padding: 8px 16px;
+    border-bottom: 1px solid #ddd;
+}
+
+ul li:last-child {
+    border-bottom: none
+}
