Added thyme functionality

--- a/src/main/webapp/WEB-INF/views/index.html
+++ b/src/main/webapp/WEB-INF/views/index.html
@@ -18,6 +18,7 @@
     <h2>Home page</h2>
 
     <h4>Menu</h4>
+    <p th:text="${message}"></p>
     <ul>
         <li>Item 1 <a class="logout" href="">Add to cart</a></li>
         <li>Item 2 <a class="logout" href="">Add to cart</a></li>
