--- a/src/main/webapp/WEB-INF/views/PastAndPendingOrders.html
+++ b/src/main/webapp/WEB-INF/views/PastAndPendingOrders.html
@@ -8,18 +8,41 @@
 <body>
 
 <div class="topnav">
-    <a href="index.html">Home</a>
-    <a class="active" href="PastAndPendingOrders.html">Past and Pending Orders</a>
-    <a href="Cart.html">Cart</a>
+    <a href="/">Home</a>
+    <a class="active" href="PastAndPendingOrders">Past and Pending Orders</a>
+    <a href="Cart">Cart</a>
     <a class="logout" href="">Log Out</a>
 </div>
 
 <div style="padding-left:16px">
 
     <h2>Past and Pending Orders</h2>
-    <p>Get pending orders from database and display here</p>
 
-    <p>Get past orders from database and display here</p>
+    <p>pending orders</p>
+    <div th:if="${not #lists.isEmpty(CurrentPendingOrders)}">
+
+        <table id="displayTable">
+            <tbody th:each="Order : ${CurrentPendingOrders}">
+            <tr>
+                <th>Name</th>
+                <th>Price</th>
+                <th>Quantity</th>
+                <th>Total Price</th>
+                <th>Estimated Time Remaining</th>
+            </tr>
+
+            <tr th:each="Item : ${Order.ItemsInOrder}">
+                <td th:text="${Item.ItemName}"></td>
+                <td th:text="${Item.Price}"></td>
+                <td> 1 </td>
+            </tr>
+            </tbody>
+        </table>
+    </div>
+
+
+    <p>Past orders</p>
+
 </div>
 
 </body>
