--- a/src/main/webapp/WEB-INF/views/PastAndPendingOrders.html
+++ b/src/main/webapp/WEB-INF/views/PastAndPendingOrders.html
@@ -5,6 +5,32 @@
     <link rel="stylesheet" href="styles.css">
     <title>Index</title>
 </head>
+
+<script th:inline="javascript">
+    var x = setInterval(function () {
+        var countDownDate = new Date(/*[[${transport.departureDate}]]*/).getTime();
+        var index = [[${iterStat.index}]];
+
+        console.log(index);
+
+        var now = new Date().getTime();
+
+        var distance = countDownDate - now;
+
+        var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+        var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+        var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+        var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+        document.getElementById('timer-'+index).innerHTML = days + "d " + hours + "h "
+            + minutes + "m " + seconds + "s ";
+        if (distance < 0) {
+            clearInterval(x);
+            document.getElementById('timer-'+index).innerHTML = "EXPIRED";
+        }
+    }, 1000);
+</script>
+
 <body>
 
 <div class="topnav">
@@ -14,7 +40,6 @@
     <a class="logout" href="">Log Out</a>
 </div>
 
-<div style="padding-left:16px">
 
     <h2>Past and Pending Orders</h2>
 
@@ -23,27 +48,54 @@
 
         <table id="displayTable">
             <tbody th:each="Order : ${CurrentPendingOrders}">
+
             <tr>
                 <th>Name</th>
                 <th>Price</th>
                 <th>Quantity</th>
-                <th>Total Price</th>
-                <th>Estimated Time Remaining</th>
+
             </tr>
 
             <tr th:each="Item : ${Order.ItemsInOrder}">
                 <td th:text="${Item.ItemName}"></td>
                 <td th:text="${Item.Price}"></td>
-                <td> 1 </td>
+                <td th:text="${Item.Quantity}"></td>
             </tr>
+            <tr>
+                <th>Total Price</th>
+                <th>Estimated Time Remaining</th>
+                <th>Order ID</th>
+            </tr>
+            <tr>
+                <td th:text="${Order.TotalPrice}"></td>
+                <td th:text="${Order.EstimatedTimeToComplete}"></td>
+                <td th:text="${Order.ID}"></td>
+            </tr>
+            <br>
+            <br>
+
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+
             </tbody>
+
+
+
         </table>
     </div>
 
 
     <p>Past orders</p>
 
-</div>
 
 </body>
 </html>
