--- a/src/main/webapp/WEB-INF/views/PastAndPendingOrders.html
+++ b/src/main/webapp/WEB-INF/views/PastAndPendingOrders.html
@@ -6,30 +6,6 @@
     <title>Index</title>
 </head>
 
-<script th:inline="javascript">
-    var x = setInterval(function () {
-        var countDownDate = new Date(/*[[${transport.departureDate}]]*/).getTime();
-        var index = [[${iterStat.index}]];
-
-        console.log(index);
-
-        var now = new Date().getTime();
-
-        var distance = countDownDate - now;
-
-        var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-        var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-        var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-        var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-
-        document.getElementById('timer-'+index).innerHTML = days + "d " + hours + "h "
-            + minutes + "m " + seconds + "s ";
-        if (distance < 0) {
-            clearInterval(x);
-            document.getElementById('timer-'+index).innerHTML = "EXPIRED";
-        }
-    }, 1000);
-</script>
 
 <body>
 
@@ -68,7 +44,40 @@
             </tr>
             <tr>
                 <td th:text="${Order.TotalPrice}"></td>
-                <td th:text="${Order.EstimatedTimeToComplete}"></td>
+                <td>
+
+                    <p  class="card-text" th:id="'timer-' + ${Order.ID}"></p>
+
+                    <script th:inline="javascript">
+
+                        var x = setInterval(function () {
+
+                            var countDownDate = new Date(/*[[${Order.EstimatedCompletionDate}]]*/).getTime();
+
+                            console.log(countDownDate);
+
+                            var index = [[${Order.ID}]];
+
+                            console.log(index);
+
+                            var now = new Date().getTime();
+
+                            var distance = countDownDate - now;
+
+                            var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+                            var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+                            var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+                            document.getElementById('timer-'+index).innerHTML = hours + "h "
+                                + minutes + "m " + seconds + "s ";
+                            if (distance < 0) {
+                                clearInterval(x);
+                                document.getElementById('timer-'+index).innerHTML = "Completed";
+                            }
+                        }, 1000);
+                    </script>
+
+                </td>
                 <td th:text="${Order.ID}"></td>
             </tr>
             <br>
@@ -91,10 +100,14 @@
 
 
         </table>
+
+
+
     </div>
 
 
     <p>Past orders</p>
+
 
 
 </body>
