--- a/src/main/webapp/WEB-INF/views/PastAndPendingOrders.html
+++ b/src/main/webapp/WEB-INF/views/PastAndPendingOrders.html
@@ -84,13 +84,7 @@
             <br>
             <br>
 
-            <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-            </tr>
-
-            <tr>
+            <tr id="lastRow" >
                 <td></td>
                 <td></td>
                 <td></td>
@@ -98,14 +92,9 @@
 
             </tbody>
 
-
-
         </table>
 
-
-
     </div>
-
 
     <p>Past orders</p>
 
@@ -138,17 +127,13 @@
     <br>
     <br>
 
-    <tr>
+    <tr id="lastRowCompleted">
         <td></td>
         <td></td>
         <td></td>
     </tr>
 
-    <tr>
-        <td></td>
-        <td></td>
-        <td></td>
-    </tr>
+
 
     </tbody>
 
