--- a/src/main/webapp/WEB-INF/views/index.html
+++ b/src/main/webapp/WEB-INF/views/index.html
@@ -11,7 +11,7 @@
     <a class="active" href="/">Home</a>
     <a href="PastAndPendingOrders">Past and Pending Orders</a>
     <a href="Cart">Cart</a>
-    <a class="logout" href="">Log Out</a>
+    <a class="logout" href="/Logout">Log Out</a>
 </div>
 
 <div style="padding-left:16px">
