--- a/src/main/webapp/WEB-INF/views/Cart.html
+++ b/src/main/webapp/WEB-INF/views/Cart.html
@@ -11,7 +11,7 @@
   <a href="/">Home</a>
   <a href="PastAndPendingOrders">Past and Pending Orders</a>
   <a class="active" href="Cart">Cart</a>
-  <a class="logout" href="">Log Out</a>
+  <a class="logout" href="/Logout">Log Out</a>
 </div>
 
 <div style="padding-left:16px">
