--- a/src/main/webapp/WEB-INF/views/admin.html
+++ b/src/main/webapp/WEB-INF/views/admin.html
@@ -4,6 +4,134 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="styles.css">
   <title>Index</title>
+  <style>
+    body {font-family: Arial, Helvetica, sans-serif;}
+
+    /* Full-width input fields */
+    input[type=text], input[type=password] {
+      width: 100%;
+      padding: 12px 20px;
+      margin: 8px 0;
+      display: inline-block;
+      border: 1px solid #ccc;
+      box-sizing: border-box;
+    }
+
+    /* Set a style for all buttons */
+    .buttonClass {
+      background-color: #FF9933;
+      color: white;
+      padding: 14px 20px;
+      margin: 8px 0;
+      border: none;
+      cursor: pointer;
+      width: 100%;
+    }
+
+    button:hover {
+      opacity: 0.8;
+    }
+
+    /* Extra styles for the cancel button */
+    .cancelbtn {
+      width: auto;
+      padding: 10px 18px;
+      background-color: #f44336;
+    }
+
+    /* Center the image and position the close button */
+    .imgcontainer {
+      text-align: center;
+      margin: 24px 0 12px 0;
+      position: relative;
+    }
+
+    img.avatar {
+      width: 40%;
+      border-radius: 50%;
+    }
+
+    .container {
+      padding: 16px;
+    }
+
+    span.psw {
+      float: right;
+      padding-top: 16px;
+    }
+
+    /* The Modal (background) */
+    .modal {
+      display: none; /* Hidden by default */
+      position: fixed; /* Stay in place */
+      z-index: 1; /* Sit on top */
+      left: 0;
+      top: 0;
+      width: 100%; /* Full width */
+      height: 100%; /* Full height */
+      overflow: auto; /* Enable scroll if needed */
+      background-color: rgb(0,0,0); /* Fallback color */
+      background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+      padding-top: 60px;
+    }
+
+    /* Modal Content/Box */
+    .modal-content {
+      background-color: #fefefe;
+      margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+      border: 1px solid #888;
+      width: 80%; /* Could be more or less, depending on screen size */
+    }
+
+    /* The Close Button (x) */
+    .close {
+      position: absolute;
+      right: 25px;
+      top: 0;
+      color: #000;
+      font-size: 35px;
+      font-weight: bold;
+    }
+
+    .close:hover,
+    .close:focus {
+      color: red;
+      cursor: pointer;
+    }
+
+    /* Add Zoom Animation */
+    .animate {
+      -webkit-animation: animatezoom 0.6s;
+      animation: animatezoom 0.6s
+    }
+
+    @-webkit-keyframes animatezoom {
+      from {-webkit-transform: scale(0)}
+      to {-webkit-transform: scale(1)}
+    }
+
+    @keyframes animatezoom {
+      from {transform: scale(0)}
+      to {transform: scale(1)}
+    }
+
+    /* Change styles for span and cancel button on extra small screens */
+    @media screen and (max-width: 300px) {
+      span.psw {
+        display: block;
+        float: none;
+      }
+      .cancelbtn {
+        width: 100%;
+      }
+    }
+
+    .center {
+      text-align: center;
+      border: 1px solid green;
+    }
+
+  </style>
 </head>
 <body>
 
@@ -37,30 +165,56 @@
 
 </div>
 
-<div th:if="${not #lists.isEmpty(ItemsInCart)}">
-  <h2>Counts List</h2>
+
+<div th:if="${not #lists.isEmpty(MenuItems)}">
   <table id="displayTable">
     <tr>
       <th>Name</th>
       <th>Price</th>
-      <th>Quantity</th>
-      <th> </th>
       <th> </th>
     </tr>
-    <tr th:each="Item : ${ItemsInCart}">
+    <tr th:each="Item : ${MenuItems}">
       <td th:text="${Item.ItemName}"></td>
       <td th:text="${Item.Price}"></td>
-      <td th:text="${Item.Quantity}"> </td>
-      <td> <button type="submit" name="AddToCart" th:value="${Item.ID}">Remove</button> </td>
-      <td> <button type="submit" name="AddToCart" th:value="${Item.ID}">Add</button> </td>
+      <td>
+        <form role="form" method="post" th:object="${Item}" th:action="@{'/AddToCart/{ID}' (ID=${Item.ID})}">
+          <button type="submit">Modify</button>
+        </form>
+      </td>
     </tr>
   </table>
 </div>
 
-<br>
+<button class="buttonClass" onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Create New Item</button>
+
+<div id="id01" class="modal">
+
+  <form class="modal-content animate" th:action="@{/process-login}" method="post">
+    <div class="imgcontainer">
+      <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
+    </div>
+
+    <div class="container">
+      <label for="ItemName"><b>Item Name</b></label>
+      <input type="text" placeholder="Item Name" name="ItemName" required>
+
+      <label for="Price"><b>Price</b></label>
+      <input type="text" placeholder="Enter Price" name="Price" required>
+
+      <button class="buttonClass" type="submit">Save</button>
+
+    </div>
+
+    <div class="container" style="background-color:#f1f1f1">
+      <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
+    </div>
+  </form>
+</div>
+
+
 
 <form role="form" method="post" th:action="@{'/Checkout'}">
-  <button type="submit">Checkout</button>
+  <button class="buttonClass" type="submit"  style="width:auto;">Submit Changes</button>
 </form>
 
 </body>
