--- a/src/main/webapp/WEB-INF/views/index.html
+++ b/src/main/webapp/WEB-INF/views/index.html
@@ -7,20 +7,19 @@
 </head>
 <body>
 
+
 <div class="topnav">
     <a class="active" href="/">Home</a>
     <a href="PastAndPendingOrders">Past and Pending Orders</a>
     <a href="Cart">Cart</a>
     <a class="logout" href="/Logout">Log Out</a>
 </div>
-<p th:text="'Welcome ' + ${un} + '!'"></p>
-
-<div style="padding-left:16px">
-    <h2>Home page</h2>
 
 
+<div style="text-align: center;">
 
-    <h4>Menu</h4>
+    <h3 th:text="'Welcome ' + ${un} + '!'"></h3>
+    <p>Please select from the following menu</p>
 
 </div>
 
