--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -50,7 +50,8 @@ ul li:last-child {
 #displayTable {
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
-    width: 50%;
+    width: 750px;
+    margin: auto;
 }
 
 #displayTable td, #displayTable th {
@@ -65,7 +66,7 @@ ul li:last-child {
 #displayTable th {
     padding-top: 12px;
     padding-bottom: 12px;
-    text-align: left;
+    text-align: center;
     background-color: #FF9933;
     color: white;
 }
@@ -82,3 +83,25 @@ table, th, td {
     border: 1px solid;
 }
 
+table.center {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+body, html {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+}
+body {
+    background-image: linear-gradient(to right, white, whitesmoke, white);
+    background-size: 100%;
+    background-position: 50% 100%;
+    background-repeat: no-repeat;
+}
