--- a/src/main/webapp/WEB-INF/views/Login.html
+++ b/src/main/webapp/WEB-INF/views/Login.html
@@ -6,7 +6,7 @@
     body {font-family: Arial, Helvetica, sans-serif;}
 
     /* Full-width input fields */
-    input[type=text], input[type=password] {
+    input[type=text], input[type=password], input[type=email] {
       width: 100%;
       padding: 12px 20px;
       margin: 8px 0;
@@ -175,11 +175,17 @@
 
     <div class="container">
 
-      <input type="text" placeholder="Enter new Username" th:field="*{email}" required>
+      <input type="email" placeholder="Enter UMGC Email" th:field="*{email}" required>
+
+
+      <input type="text" placeholder="Enter new Username" th:field="*{username}" required>
 
 
       <input type="password" placeholder="Enter new Password" th:field="*{password}" required>
 
+      <input type="password" placeholder="Verify Password" th:field="*{verifyPassword}" required>
+
+      <input type="text" placeholder="Enter Student ID Number" th:field="*{studentID}" required>
 
       <button type="submit">Register</button>
 
