--- a/src/main/webapp/WEB-INF/views/index.html
+++ b/src/main/webapp/WEB-INF/views/index.html
@@ -2,16 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="15">
     <link rel="stylesheet" href="styles.css">
     <title>Index</title>
+
 </head>
+<style>
+
+</style>
 <body>
 
 
 <div class="topnav">
     <a class="active" href="/">Home</a>
-    <a href="PastAndPendingOrders">Past and Pending Orders</a>
+    <a href="PastAndPendingOrders" class="notification">
+        <span>Orders</span>
+        <span class="badge" th:text="${NewlyCompletedOrders}"></span>
+    </a>
     <a href="Cart">Cart</a>
+
     <a class="logout" href="/Logout">Log Out</a>
 </div>
 
@@ -43,6 +52,8 @@
         </tr>
     </table>
 </div>
+
+
 
 </body>
 </html>
