--- a/src/main/webapp/WEB-INF/views/styles.css
+++ b/src/main/webapp/WEB-INF/views/styles.css
@@ -112,3 +112,26 @@ body {
     background-position: 50% 100%;
     background-repeat: no-repeat;
 }
+
+.notification {
+    color: white;
+    text-decoration: none;
+    padding: 15px 26px;
+    position: relative;
+    display: inline-block;
+    border-radius: 2px;
+}
+
+.notification:hover {
+    background: red;
+}
+
+.notification .badge {
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    padding: 5px 10px;
+    border-radius: 50%;
+    background-color: red;
+    color: white;
+}
