--- a/src/main/webapp/WEB-INF/views/Login.html
+++ b/src/main/webapp/WEB-INF/views/Login.html
@@ -214,6 +214,15 @@
     <p th:text="${message}"></p>
 
   </div>
+</div>
+
+<div class="centerErrors" th:if="${not #lists.isEmpty(success)}">
+
+  <div th:each="message : ${success}">
+
+    <p style="color: green" th:text="${message}"></p>
+
+  </div>
 
 </div>
 
