--- a/src/main/webapp/WEB-INF/views/admin.html
+++ b/src/main/webapp/WEB-INF/views/admin.html
@@ -191,6 +191,11 @@
 
       <input type="text" placeholder="Enter Name" name="ItemName" required>
 
+      <input type="text" placeholder="Enter Category" name="ItemCategory" required>
+
+
+      <input type="text" placeholder="Enter Description" name="ItemDescription" required>
+
 
       <input type="text" placeholder="Enter Price" name="ItemPrice" required>
 
