split customer view by category

--- a/src/main/webapp/WEB-INF/views/admin.html
+++ b/src/main/webapp/WEB-INF/views/admin.html
@@ -233,10 +233,10 @@
       <input type="text" placeholder="New Price" name="ItemPrice" required>
 
 
-      <input type="text" placeholder="New Category" name="ItemDescription" required>
+      <input type="text" placeholder="New Category" name="ItemCategory" required>
 
 
-      <input type="text" placeholder="New Description" name="ItemCategory" required>
+      <input type="text" placeholder="New Description" name="ItemDescription" required>
 
 
       <button class="buttonClass" type="submit">Save</button>
