saving before merge

--- a/src/main/webapp/WEB-INF/views/admin.html
+++ b/src/main/webapp/WEB-INF/views/admin.html
@@ -234,6 +234,7 @@
 
 
       <input type="text" placeholder="New Category" name="ItemCategory" required>
+<!--      <select class="form-control" th:field="${categoryOptions}"  name="ItemCategory">-->
 
 
       <input type="text" placeholder="New Description" name="ItemDescription" required>
