--- a/src/main/webapp/WEB-INF/views/admin.html
+++ b/src/main/webapp/WEB-INF/views/admin.html
@@ -131,6 +131,11 @@
       border: 1px solid green;
     }
 
+    .centerErrors {
+      text-align: center;
+      color: red;
+    }
+
   </style>
 </head>
 <body>
@@ -260,12 +265,17 @@
   </form>
 </div>
 
+<div class="centerErrors" th:if="${not #lists.isEmpty(errors)}">
 
+  <p style="color: black">Error:</p>
 
+  <div th:each="message : ${errors}">
 
-<!--<form role="form" method="post" th:action="@{'/Checkout'}">-->
-<!--  <button class="buttonClass" type="submit"  style="width:auto;">Submit Changes</button>-->
-<!--</form>-->
+    <p th:text="${message}"></p>
+
+  </div>
+</div>
+
 
 </body>
 </html>
