get users query is working

--- a/src/main/webapp/WEB-INF/views/admin.html
+++ b/src/main/webapp/WEB-INF/views/admin.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="styles.css">
-  <title>Index</title>
+  <title>Admin</title>
   <style>
     body {font-family: Arial, Helvetica, sans-serif;}
 
@@ -144,7 +144,7 @@
 
 <div class="topnav">
   <a class="active" href="admin">Update Menu</a>
-  <a href="admin">Query Database</a>
+  <a href="queryDatabase">Query Database</a>
   <a class="logout" href="/Logout">Log Out</a>
 </div>
 
